--- a/main.css
+++ b/main.css
@@ -1,8 +1,97 @@
-h1 {
+* {
+    box-sizing: border-box;
+}
+
+html {
+
+    margin-left: auto;
+    margin-right: auto;
+}
+
+header {
+    padding-top: 100px;
+    background-image: url('http://www.tikilive.com/tiki-blog/wp-content/uploads/2015/12/watch-tv-shows-online.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+
+}
+
+.page-title {
+    text-align: center;
+    font-family: 'Quicksand', sans-serif;
+}
+
+ h1 {
+    color: #416F59;
+    font-size: 50px;
+   
+}
+
+fieldset {
+    border: none;
+    text-align: center;
+    margin-top: 50px;
+    padding-bottom: 300px;
+}
+
+.js-results div, .js-popular-movies div{
+    /*width: 350px;*/
+    font-family: 'Roboto', sans-serif;
+    border: solid black 1px;
+    margin: 10px;
+    padding: 12px;
+   /* display: inline-block;*/
+}
+
+.thumbnail-img {
     text-align: center;
 }
 
-.cast {
-    border: none
-    font-size: 12px;
+label {
+    font-size: 36px;
+    color: #4D8369;
+    margin: 15px;
+    margin-bottom: 15px;
+    display: block;
 }
+
+main {
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+select {
+    
+    
+    background-image: url('https://image.flaticon.com/icons/svg/60/60995.svg');
+}
+
+/*
+.styled select {
+  background: transparent;
+  width: 150px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  height: 34px;
+}
+.styled {
+  margin: 50px;
+  width: 120px;
+  height: 34px;
+  border: 1px solid #111;
+  border-radius: 3px;
+  overflow: hidden;
+  background: url(http://www.stackoverflow.com/favicon.ico) 96% / 20% no-repeat #eee;
+}
+<div class="styled">
+  <select>
+    <option>Pineapples</option>
+    <option selected>Apples</option>
+    <option>Chocklate</option>
+    <option>Pancakes</option>
+  </select>
+</div>
+*/
