--- a/main.css
+++ b/main.css
@@ -3,95 +3,304 @@
 }
 
 html {
-
-    margin-left: auto;
-    margin-right: auto;
+    height: 100%;
 }
 
 header {
-    padding-top: 100px;
-    background-image: url('http://www.tikilive.com/tiki-blog/wp-content/uploads/2015/12/watch-tv-shows-online.jpg');
-    background-repeat: no-repeat;
+
+    background: linear-gradient(to bottom, rgba(102,102,102, 0.3), rgba(229,230,235, 0.33)
+    ), url('http://novalineabagni.com/wp-content/uploads/2017/07/Theater-Marquee-Signs.jpg') no-repeat;
     background-size: cover;
+    height: 100%;
+    background-position: center;
     width: 100%;
-
-}
-
-.page-title {
+    font-family: 'Roboto', sans-serif;
     text-align: center;
-    font-family: 'Quicksand', sans-serif;
+
 }
 
- h1 {
-    color: #416F59;
+form {
+    width: 360px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 50px;
+    margin-bottom: 100px;
+}
+
+
+.search {
+    font-family: Arial;
+    font-size: 15px;
+    border: none;
+    background-color: RGB(195, 48, 45);
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    padding: 8px;
+
+}
+.search:hover, select:hover {
+    border: 1.5px solid black;
+}
+
+select {
+    font-size: 15px;
+    border: none;
+    background-color: RGB(195, 48, 45);
+    color: white;
+    cursor: pointer;
+    padding: 8px;
+    
+}
+
+
+
+ .page-title {
+    margin-top:0;
+    margin-bottom: 60px;
+    color: white;
     font-size: 50px;
+    text-shadow:
+		-1px -1px 0 #ce9b20,
+		1px -1px 0 #ce9b20,
+		-1px 1px 0 #ce9b20,
+		1px 1px 0 #ce9b20;
    
 }
 
 fieldset {
     border: none;
     text-align: center;
-    margin-top: 50px;
-    padding-bottom: 300px;
-}
 
-.js-results div, .js-popular-movies div{
-    /*width: 350px;*/
-    font-family: 'Roboto', sans-serif;
-    border: solid black 1px;
-    margin: 10px;
-    padding: 12px;
-   /* display: inline-block;*/
-}
-
-.thumbnail-img {
-    text-align: center;
 }
 
 label {
-    font-size: 36px;
-    color: #4D8369;
+    font-size: 28px;
     margin: 15px;
-    margin-bottom: 15px;
+    margin-bottom: 8px;
     display: block;
+    font-weight: bold;
+}
+
+.genre {
+    position: relative;
+    top: 55px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.popular {
+    position: relative;
+    top: 45px;
+}
+
+.movies {
+    width: 100%;
+    padding: 12px;
+    border: solid black 2px;
+}
+
+.movies:hover {
+    background-color: rgba(196, 23, 23, 0.4);
+ 
+}
+
+.js-results {
+    width: 100%;
 }
 
 main {
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
+    font-family: 'Quicksand', sans-serif;
+}
+
+
+.youtube-container {
+    display: inline-block;
+    position: relative;
+    top: 8px;
+    width: 176px;
+    height: 46px;
+}
+
+.watch {
+    display: inline-block;
+    font-size: 32px;
+    background-color: transparent;
+}
+
+.next {
+    margin: 6px;
+    float: right;
+    right: 0;
 
 }
 
-select {
+.prev {
+    margin: 6px;
+    clear: right;
+    float: left;
+    left: 0;
+
+}
+
+.watch-youtube {
+    background-color: transparent;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
     
-    
-    background-image: url('https://image.flaticon.com/icons/svg/60/60995.svg');
 }
 
-/*
-.styled select {
-  background: transparent;
-  width: 150px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  height: 34px;
+.watch-youtube:hover {
+    border: 1px white solid;
+    border-radius: 5px;
+
 }
-.styled {
-  margin: 50px;
-  width: 120px;
-  height: 34px;
-  border: 1px solid #111;
-  border-radius: 3px;
-  overflow: hidden;
-  background: url(http://www.stackoverflow.com/favicon.ico) 96% / 20% no-repeat #eee;
+.youtube-logo {
+    position: relative;
+    top: 0;
+    left: -6px;
+    cursor: pointer;
 }
-<div class="styled">
-  <select>
-    <option>Pineapples</option>
-    <option selected>Apples</option>
-    <option>Chocklate</option>
-    <option>Pancakes</option>
-  </select>
-</div>
-*/
+
+.title-search {
+    color: Red;
+}
+
+/* doesn't fill screen*/
+@media only screen and (min-width: 320px) {
+  
+	
+	
+}
+
+@media only screen and (min-width: 360px) {
+    .genre {
+        position: relative;
+        top: 55px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .popular {
+        position: relative;
+        top: 45px;
+    }
+}
+
+
+
+@media only screen and (min-width: 411px) {
+    .genre {
+        position: relative;
+        top: 85px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .popular {
+        position: relative;
+        top: 60px;
+    }
+}
+
+
+@media only screen and (min-width: 760px) {
+    header {
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        margin-top: 0px;
+    }
+
+    .genre {
+        position: relative;
+        top: 90px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .popular {
+        position: relative;
+        top: 60px;
+    }
+
+}
+
+@media only screen and (min-width: 960px) {
+    .genre {
+       
+        position: relative;
+        top: 90px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    label {
+        margin: 0px;
+        font-size: 36px;
+    }
+    .popular {
+        position: relative;
+        top: 90px;
+    }
+    .movies {
+        font-size: 20px;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .page-title {
+        font-size: 70px;
+        margin-top: 0px;
+    }
+    .genre {
+        position: relative;
+        top: 115px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 18px;
+    }
+
+    label {
+        font-size: 42px;
+        margin-bottom: 15px;
+    }
+    .search {
+        font-size: 28px;
+    }
+
+    select {
+        font-size: 28px;
+    }
+    .popular {
+        position: relative;
+        top: 90px;
+    }
+    form {
+        width: 400px;
+    }
+    .movies {
+        font-size: 20px;
+    }
+    .genre select {
+        width: 200px;
+        height: 48px;
+    }
+}
+
+@media only screen and (min-width: 1600px) {
+    html {
+        width: 1600px;
+        margin-right: auto;
+        margin-left: auto;
+    }
+    .movies {
+        font-size: 20px;
+    }
+
+    .genre select {
+        width: 200px;
+        height: 48px;
+    }
+}
