--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@ html {
     height: 100%;
 }
 
+/*added background image to header*/
 header {
 
     background: linear-gradient(to bottom, rgba(102,102,102, 0.3), rgba(229,230,235, 0.33)
@@ -16,8 +17,8 @@ header {
     width: 100%;
     font-family: 'Roboto', sans-serif;
     text-align: center;
-
 }
+
 
 form {
     width: 360px;
@@ -27,7 +28,7 @@ form {
     margin-bottom: 100px;
 }
 
-
+/* button for searching*/
 .search {
     font-family: Arial;
     font-size: 15px;
@@ -37,12 +38,19 @@ form {
     color: white;
     cursor: pointer;
     padding: 8px;
-
 }
+
 .search:hover, select:hover {
     border: 1.5px solid black;
 }
 
+/*container for select dropdown menu*/
+.genre select {
+    width: 150px;
+    height: 32px;
+}
+
+/*dropdown menu for genre types*/
 select {
     font-size: 15px;
     border: none;
@@ -50,12 +58,10 @@ select {
     color: white;
     cursor: pointer;
     padding: 8px;
-    
 }
 
-
-
- .page-title {
+/*main title/header for the page*/
+.page-title {
     margin-top:0;
     margin-bottom: 60px;
     color: white;
@@ -65,13 +71,11 @@ select {
 		1px -1px 0 #ce9b20,
 		-1px 1px 0 #ce9b20,
 		1px 1px 0 #ce9b20;
-   
 }
 
 fieldset {
     border: none;
     text-align: center;
-
 }
 
 label {
@@ -82,6 +86,7 @@ label {
     font-weight: bold;
 }
 
+/*search field for genres*/
 .genre {
     position: relative;
     top: 55px;
@@ -89,11 +94,17 @@ label {
     margin-right: auto;
 }
 
+/*search field for popular movies*/
 .popular {
     position: relative;
     top: 45px;
 }
 
+main {
+    font-family: 'Quicksand', sans-serif;
+}
+
+/*results that show each movie matching search*/
 .movies {
     width: 100%;
     padding: 12px;
@@ -109,11 +120,8 @@ label {
     width: 100%;
 }
 
-main {
-    font-family: 'Quicksand', sans-serif;
-}
 
-
+/*container your youtube logo*/
 .youtube-container {
     display: inline-block;
     position: relative;
@@ -122,41 +130,44 @@ main {
     height: 46px;
 }
 
+/* watch paragraph element*/
 .watch {
     display: inline-block;
-    font-size: 32px;
-    background-color: transparent;
+    font-size: 28px;
 }
 
+/*next button*/
 .next {
     margin: 6px;
     float: right;
     right: 0;
-
+    padding-left: 12px;
+    padding-right: 12px;
 }
 
+/*prev button*/
 .prev {
     margin: 6px;
-    clear: right;
     float: left;
     left: 0;
-
+    padding-left: 12px;
+    padding-right: 12px;
 }
 
+/*youtube button*/
 .watch-youtube {
     background-color: transparent;
     margin: 0;
     width: 100%;
     height: 100%;
     border: none;
-    
 }
 
 .watch-youtube:hover {
     border: 1px white solid;
     border-radius: 5px;
-
 }
+
 .youtube-logo {
     position: relative;
     top: 0;
@@ -164,33 +175,12 @@ main {
     cursor: pointer;
 }
 
-.title-search {
+.movie-title {
     color: Red;
 }
 
-/* doesn't fill screen*/
-@media only screen and (min-width: 320px) {
-  
-	
-	
-}
 
-@media only screen and (min-width: 360px) {
-    .genre {
-        position: relative;
-        top: 55px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    
-    .popular {
-        position: relative;
-        top: 45px;
-    }
-}
-
-
-
+/*iphone 6/7/8+, pixel2*/
 @media only screen and (min-width: 411px) {
     .genre {
         position: relative;
@@ -205,7 +195,7 @@ main {
     }
 }
 
-
+/*ipad */
 @media only screen and (min-width: 760px) {
     header {
         width: 100%;
@@ -228,6 +218,7 @@ main {
 
 }
 
+
 @media only screen and (min-width: 960px) {
     .genre {
        
@@ -247,6 +238,7 @@ main {
     .movies {
         font-size: 20px;
     }
+    
 }
 
 @media only screen and (min-width: 1200px) {
